# OpenLecture

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  openlecture.spec  pyproject.toml
backend/app/: config.py  main.py  models.py  run.py  storage.py
backend/app/routers/: courses.py  languages.py  lectures.py  notes.py  settings_router.py  transcription_ws.py  transcripts.py  translate.py
backend/app/services/: language_pairs.py  qwen_mt.py
backend/app/services/transcription/: __init__.py  base.py  qwen.py
backend/tests/: conftest.py  test_courses.py  test_languages.py  test_lectures.py  test_notes.py  test_run.py  test_settings.py  test_storage.py  test_transcripts.py
docs/: contributor-guide.md  edition-matrix.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: AppIcon.tsx  LanguageToggle.tsx
frontend/src/hooks/: useAutoPause.ts  useLanguagePairs.ts  useSettings.ts  useTranscription.ts
frontend/src/i18n/: en.json  index.ts  zh.json
frontend/src/lib/: api.ts  pcm-worklet.ts  tauri.ts  transcription-ws.ts  utils.ts
frontend/src/pages/: CourseDetail.tsx  Dashboard.tsx  LectureDetail.tsx  LiveLecture.tsx  Settings.tsx  SetupPage.tsx
frontend/src/types/: index.ts
scripts/: build.sh  gen_icon.py
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+5 files in other folders)
